--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,13 @@ __pycache__/
 *.so
 
 # VS Code
-
 .vscode
+
+# alembic
+alembic.ini
+
+#database sqlite
+app/db/CommentHubDb.db
 
 # Distribution / packaging
 .Python
