--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,25 @@
+alembic==1.8.1
+cfgv==3.3.1
+click==8.1.3
+colorama==0.4.5
+commonmark==0.9.1
+distlib==0.3.6
+filelock==3.8.0
+identify==2.5.6
+importlib-metadata==5.0.0
+importlib-resources==5.10.0
+Mako==1.2.3
+MarkupSafe==2.1.1
+nodeenv==1.7.0
+platformdirs==2.5.2
+pre-commit==2.20.0
+Pygments==2.13.0
+PyYAML==6.0
+rich==12.6.0
+shellingham==1.5.0
 SQLAlchemy==1.4.41
+toml==0.10.2
+typer==0.6.1
+typing_extensions==4.4.0
+virtualenv==20.16.5
+zipp==3.9.0
