--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,9 @@ MarkupSafe==2.1.1
 nodeenv==1.7.0
 platformdirs==2.5.2
 pre-commit==2.20.0
+pydantic==1.10.2
 Pygments==2.13.0
+python-dotenv==0.21.0
 PyYAML==6.0
 rich==12.6.0
 shellingham==1.5.0
